--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 ..idea/.idea.ExceleTech/.idea
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
-
+.idea/.idea.ExceleTech/.idea
 # Mono auto generated files
 mono_crash.*
 
@@ -40,7 +40,7 @@ bld/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
-
+*.idea/.idea.ExceleTech/.idea
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
