--- a/ExceleTech.API/Properties/launchSettings.json
+++ b/ExceleTech.API/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5002"
+      "applicationUrl": "https://localhost:5001"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -33,8 +33,7 @@
       "launchBrowser": true,
       "launchUrl": "",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "5001",
-        "ASPNETCORE_HTTP_PORTS": "5000"
+        "ASPNETCORE_HTTPS_PORTS": "5001"
       },
       "publishAllPorts": true,
       "useSSL": true
