--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       context: .
       dockerfile: ExceleTech.API/Dockerfile
     ports:
-      - "5000:5000"
-      - "5001:5001"
+      - "5001:5001" 
+    depends_on:
+        - exceletech.database
   exceletech.database:
     image: postgres:latest
     container_name: exceletech.database
